--- a/Code/transformer_core_implement.ipynb
+++ b/Code/transformer_core_implement.ipynb
@@ -540,7 +540,7 @@
     "## 构建self attention\n",
     "def scaled_dot_product_attention(Q, K, V, attn_mask):\n",
     "    # shape of Q,K,V || Q:( batch_size*num_head,tgt_len,model_dim/num_head),,K:( batch_size*num_head,seq_len,model_dim/num_head)\n",
-    "    score = torch.bmm(Q, V.transpose(-2, -1)) / torch.sqrt(\n",
+    "    score = torch.bmm(Q, K.transpose(-2, -1)) / torch.sqrt(\n",
     "        model_dim\n",
     "    )  ## Q@K.T /model_dim\n",
     "    masked_score = score.masked_fill(attn_mask, -1e9)  ## 填充被mask的位置\n",
